update CTO role at Relatient

--- a/about/index.html
+++ b/about/index.html
@@ -20,6 +20,12 @@ title: About
     <p>
         I am currently the Chief Technology Officer at <a href="https://www.relatient.com/">Relatient</a>, a healthcare software company whose mission is creating a simpler experience for people accessing the healthcare system. Our focus is delivering a world-class patient scheduling and engagement platform.
     </p>
+    <p>
+        My executive responsibilities include Engineering, Interoperability, Cloud Operations, Data Operations, Client Support, Security &amp; Compliance, and IT.
+    </p>
+    <p>
+        Our headquarters are located in <a href="https://maps.app.goo.gl/vGEo1BE2Fz9AADym6">Atlanta, Georgia</a>, though the majority of US-based staff are scattered across the country. We also have an office located in <a href="https://maps.app.goo.gl/Gbr74P2h9RVryLnt6">Pune, India</a> comprised of a broad range of cross-organizational roles.
+    </p>
     <br/>
     <div class="level is-mobile">
         <div class="level-left">
@@ -199,6 +205,7 @@ title: About
         <li><a href="https://maps.app.goo.gl/PZE5scABB8yx3V1X7">Galway, Ireland</a></li>
         <li><a href="https://maps.app.goo.gl/2PhgPs4r5iUdfRDe7">Westport, Ireland</a></li>
         <li><a href="https://maps.app.goo.gl/1Sg9eHdBENnVWWhp8">Aran Islands, Ireland</a></li>
+        <li><a href="https://maps.app.goo.gl/1we856Js69JLfZuC6">Achill Island, Ireland</a></li>
         <li><a href="https://maps.app.goo.gl/DjYDE8yzzwywumrP9">Victoria, BC</a></li>
         <li><a href="https://maps.app.goo.gl/yNiWJB2DeeLYmWq66">Port Angeles, Washington</a></li>
         <li><a href="https://goo.gl/maps/LovgMAMxhaRqMVdo9">Anchorage, Alaska</a></li>
