add The Focus Group board position

--- a/about/index.html
+++ b/about/index.html
@@ -30,6 +30,23 @@ title: About
     <div class="level is-mobile">
         <div class="level-left">
             <div class="level-item">
+                <a href="https://www.thefocusgroup.io/">
+                    <p class="title is-4">The Focus Group</p>
+                    <p class="subtitle is-5">Board Member</p>
+                </a>
+            </div>
+        </div>
+        <div class="level-right">
+            <h3 class="subtitle is-6 has-text-grey">Since 2025</h3>
+        </div>
+    </div>
+    <p>
+        I am currently serving as an independent board member for <a href="https://www.thefocusgroup.io/">The Focus Group</a>, an AI-native industry analyst firm that is focused on turning trusted insight into faster decisions, smarter actions, and better outcomes at a fraction of the cost of legacy models.
+    </p>
+    <br/>
+    <div class="level is-mobile">
+        <div class="level-left">
+            <div class="level-item">
                 <a href="https://www.illuminate.ai/">
                     <p class="title is-4">Illuminate</p>
                     <p class="subtitle is-5">Board Member</p>
