minor edits to about page

--- a/about/index.html
+++ b/about/index.html
@@ -21,7 +21,7 @@ title: About
         I am currently the Chief Technology Officer at <a href="https://www.relatient.com/">Relatient</a>, a healthcare software company whose mission is creating a simpler experience for people accessing the healthcare system. Our focus is delivering a world-class patient scheduling and engagement platform.
     </p>
     <p>
-        My executive responsibilities include Engineering, Interoperability, Cloud Operations, Data Operations, Client Support, Security &amp; Compliance, and IT.
+        My responsibilities include Engineering, Interoperability, Cloud Operations, Data Operations, Client Support, Security &amp; Compliance, and IT.
     </p>
     <p>
         Our headquarters are located in <a href="https://maps.app.goo.gl/vGEo1BE2Fz9AADym6">Atlanta, Georgia</a>, though the majority of US-based staff are scattered across the country. We also have an office located in <a href="https://maps.app.goo.gl/Gbr74P2h9RVryLnt6">Pune, India</a> comprised of a broad range of cross-organizational roles.
@@ -78,7 +78,7 @@ title: About
         I was previously the Chief Technology Officer at <a href="https://www.vendavo.com">Vendavo</a>, a global software and services company headquartered in <a href="https://goo.gl/maps/YhCJhNTBw1S2">Denver</a>. The company is focused on helping enterprises maximize growth and profitability by identifying and harvesting margin improvement opportunities.
     </p>
     <p>
-        My executive responsibilities included Engineering, User Experience and Security &amp; Compliance. The majority of that time was spent developing and communicating technology vision and strategy, ensuring organizational alignment with business goals, and relentlessly optimizing how teams worked together to deliver great products.
+        My responsibilities included Engineering, User Experience, and Security &amp; Compliance. The majority of that time was spent developing and communicating technology vision and strategy, ensuring organizational alignment with business goals, and optimizing how teams worked together to deliver great products.
     </p>
     <p>
         At the time, teams were geographically distributed across the following locations:
@@ -94,7 +94,7 @@ title: About
         <li><a href="https://goo.gl/maps/xKNJP9H78ySpBC5W9">Bangalore, India</a></li>
     </ul>
     <p>
-        Joining the company in August 2016, I directed most of my efforts on structural and process changes that essentially modernized the way products were developed. A focus on cycle time reduction, build automation and technical excellence gave teams significant advantage over competitors that continue to operate with a traditional mindset.
+        Joining the company in August 2016, I directed most of my efforts towards structural and procedural changes that essentially modernized the way products were developed. A focus on cycle time reduction, build automation, and technical excellence gave teams significant advantage over competitors that continued to operate with a traditional mindset.
     </p>
     <p>
         Vendavo was acquired by <a href="https://www.franciscopartners.com/home">Francisco Partners</a>, a global private equity firm, in <a href="https://www.franciscopartners.com/news/francisco-partners-completes-acquisition-of-vendavo-inc">October 2014</a>.
@@ -137,7 +137,7 @@ title: About
         I was previously Vice President and Engineering Fellow at <a href="https://www.cerner.com">Cerner</a>, a global healthcare information technology company headquartered in <a href="https://goo.gl/maps/g1TaiVfG5BT2">Kansas City, Missouri</a>. At the time of my departure, the global reach of Cerner solutions spanned more than 30 countries.
     </p>
     <p>
-        Prior to leaving, I had executive responsibility for a very talented software infrastructure group that designed and built web-scale services primarily centered around authentication, authorization, auditing, administration, and petabyte-sized data ingestion and processing. In addition to my day job, I spent a significant amount of time focused onstrategic technology and architecture imperatives with an emphasis on accelerating the transition from traditional enterprise applications to service-based solutions and platforms.
+        Prior to leaving, I had responsibility for a very talented software infrastructure group that designed and built web-scale services primarily centered around authentication, authorization, auditing, administration, and petabyte-sized data ingestion and processing. In addition to my day job, I spent a significant amount of time focused onstrategic technology and architecture imperatives with an emphasis on accelerating the transition from traditional enterprise applications to service-based solutions and platforms.
     </p>
     <p>
         I have an extensive background in software development, particularly in the areas of application architecture, scalable computing and distributed systems. During my 25 years with Cerner, I had been instrumental in leading the company through pivotal shifts in technology and architecture, and had also been influential in promoting the use of more collaborative and nimble engineering processes.
