update board position at Illuminate

--- a/about/index.html
+++ b/about/index.html
@@ -54,11 +54,11 @@ title: About
             </div>
         </div>
         <div class="level-right">
-            <h3 class="subtitle is-6 has-text-grey">Since 2025</h3>
+            <h3 class="subtitle is-6 has-text-grey">2025 to 2026</h3>
         </div>
     </div>
     <p>
-        I am currently serving as an independent board member for <a href="https://www.illuminate.ai/">Illuminate</a>, an industry leading provider of end-to-end discovery, follow-up, and patient management solutions for hospitals and health systems. Illuminate combines years of advanced AI technology with the knowledge of nurse navigators that possess a deep understanding of integrated clinical workflows and follow-up processes.
+        I previously served as an independent board member for <a href="https://www.illuminate.ai/">Illuminate</a>, an industry leading provider of end-to-end discovery, follow-up, and patient management solutions for hospitals and health systems. Illuminate combines years of advanced AI technology with the knowledge of nurse navigators that possess a deep understanding of integrated clinical workflows and follow-up processes.
     </p>
     <br/>
     <div class="level is-mobile">
